--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Asia%2FJerusalem&src=MW1iZnVzZmxkNnRucGRjZGhwcW5razN2OWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4uamV3aXNoI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23E67C73&color=%23D50000" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
+<br/>
+<h1>משחקים</h1>
+<img src="https://github.com/moshekagan/Hapoel/blob/main/games.png?raw=true" style="width: 50%"/>
 </body>
 </html>
 
