--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <br/>
 <h1>משחקים</h1>
 <img src="https://github.com/moshekagan/Hapoel/blob/main/games.png?raw=true" style="width: 100%"/>
+<script src="/ttt.js"></script>
+
 </body>
 </html>
 
